added profile picture

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="main-container">
             <div id="sub-container-1">
                 <div id="main-img">
-                    <img src="Assets/images/pedro-miranda-vaP-tUfIXFU-unsplash.jpg" height="300px">
+                    <img src="Assets/images/1517346975304.jpg" height="300px">
                 </div>
                 <div id="main-title">
                     <h1>Nima Moeini</h1>
@@ -59,17 +59,17 @@
             <h2>Contact</h2>
             <p> I would love to hear from you !!!</p>
             <div id="socials">
-                <a href=""><img class="social-icons" src="./Assets/Images/github-sign.png"></a>
-                <a href=""><img class="social-icons" src="./Assets/Images/linkedin.png"></a>              
+                <a href="https://github.com/nickthepriest76"><img class="social-icons" src="./Assets/Images/github-sign.png"></a>
+                <a href="https://www.linkedin.com/in/nima-moeini-p-e-electrical-electronics-computer-tx-b190aa8b/"><img class="social-icons" src="./Assets/Images/linkedin.png"></a>              
             </div>
             <div>
                 <div class="contact-details">
                     <img class="social-icons" src="./Assets/Images/envelope-of-white-paper.png">
-                    <p>abc@example.com</p>
+                    <p>nima_moeiny@yahoo.com</p>
                 </div>
                 <div class="contact-details">
                     <img class="social-icons" src="./Assets/Images/telephone.png">
-                    <p>+11 7321312 123</p>
+                    <p>+1 713 553 5038</p>
                 </div>
             </div>
         </div>
