change picture format to png instead of jpg

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="main-container">
             <div id="sub-container-1">
                 <div id="main-img">
-                    <img src="Assets/images/1517346975304.jpg" height="300px">
+                    <img src="Assets/images/1517346975304.png" height="300px">
                 </div>
                 <div id="main-title">
                     <h1>Nima Moeini</h1>
