adding title and stuff

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="main-container">
             <div id="sub-container-1">
                 <div id="main-img">
-                    <img src="Assets/images/1517346975304.png" height="300px">
+                    <img src="Assets/images/1517346975304.png" height="300px" alt="Profile Picture">
                 </div>
                 <div id="main-title">
                     <h1>Nima Moeini</h1>
@@ -30,26 +30,27 @@
     <main>
         <div class="section-container" id="about">
             <h2>About Me</h2>
-            <p>My name is nima born Aug 1976 in Iran-Tehran . My major is Electronics Engineering </p>
+            <p> My name is nima; born in Aug 1976 in Iran-Tehran. My major is Electronics Engineering. I started to work as an electrical technician while I was a university student and then, after my graduation, was promoted to electrical project engineer. I moved to the united state in Oct 2013 and chose to work in the automation field, which made me go to school for two years. I found a job at GE water as an E&I field engineer, and as I got some skills as a PLC programmer, I started traveling around the USA. During the hard work, I passed EIT and, after four years, took the professional engineering exam at Electrical, Electronics, and computers and passed it at the first shot. Now I hold a PE license. I always dreamed of being a software developer but never had a chance, and I believe the opportunity I was waiting for its time has come. That's all I need is to study hard and be consistent, and never get disappointed. Other words,
+                " Never Back Down"</p>
         </div>
         <div class="section-container" id="projects">
             <h2>Projects</h2>
             <div id="projects-grid">
                 <div class="project-card">
                     <a href="">
-                        <img class="project-img" src="./Assets/Images/pedro-miranda-vaP-tUfIXFU-unsplash.jpg">
+                        <img class="project-img" src="./Assets/Images/pedro-miranda-vaP-tUfIXFU-unsplash.jpg " alt="Project image 1" >
                     </a>
                     <h4>Project 1</h4>
                 </div>
                 <div class="project-card">
                     <a href="">
-                        <img class="project-img" src="./Assets/Images/pedro-miranda-vaP-tUfIXFU-unsplash.jpg">
+                        <img class="project-img" src="./Assets/Images/pedro-miranda-vaP-tUfIXFU-unsplash.jpg" alt="Project image 2">
                     </a>
                     <h4>Project 1</h4>
                 </div>
                 <div class="project-card">
                     <a href="">
-                        <img class="project-img" src="./Assets/Images/pedro-miranda-vaP-tUfIXFU-unsplash.jpg">
+                        <img class="project-img" src="./Assets/Images/pedro-miranda-vaP-tUfIXFU-unsplash.jpg" alt="Project image 3">
                     </a>
                     <h4>Project 1</h4>
                 </div>
