fix the main picture path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="main-container">
             <div id="sub-container-1">
                 <div id="main-img">
-                    <img src="Assets/Images/Canada.png"  alt="Profile Picture">
+                    <img src="./Assets/Images/Canada.png"  alt="Profile Picture">
                 </div>
                 <div id="main-title">
                     <h1>Nima Moeini</h1>
